hphp/hack/test/typecheck/new_inference/nothing/toplevel.php.exp
File "toplevel.php", line 4, characters 18-25:
Primitive type annotations are always available and may no longer be referred to in the toplevel namespace. (Naming[2039])
